Fix alignment

--- a/Main/static/assets/css/homepage.css
+++ b/Main/static/assets/css/homepage.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    padding: 75px 105px 0;
+    padding: 75px 105px;
 }
 
 #newest {
@@ -179,7 +179,7 @@
     @media (max-width: 750px) {
 
         #homepage {
-            padding: 75px 25px 0;
+            padding: 75px 25px;
         }
 
     }
